lvgl: Add support for FSMC as 16 bit interface
STM32 FSMC peripheral (for accessing external memories)
is used to write to LCD with 8080 II 16 bit interface.
It allows for maximum performance when LCD is connected
to dedicated pins.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/drivers/display/lcd_itf/pkg.yml
+++ b/hw/drivers/display/lcd_itf/pkg.yml
@@ -32,4 +32,6 @@ pkg.deps.'LCD_ITF == "8080_II_8_bit"':
     - "@apache-mynewt-core/hw/drivers/display/lcd_itf/itf_8080"
 pkg.deps.'LCD_ITF == "8080_II_16_bit"':
     - "@apache-mynewt-core/hw/drivers/display/lcd_itf/itf_8080"
+pkg.deps.'LCD_ITF == "8080_II_16_bit_stm32_fsmc"':
+    - "@apache-mynewt-core/hw/drivers/display/lcd_itf/itf_8080_stm32_fsmc"
 
