spiflash: Make STM32 spiflash code common for all BSP
Code and settings for making SPI flash as hal_flash
were put in several BSP (not all had SPI flash on board).
Now code is move to common folder so any stm32 base BSP
can simply enable SPI flash.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/mcu/stm/stm32_common/syscfg.yml
+++ b/hw/mcu/stm/stm32_common/syscfg.yml
@@ -460,6 +460,14 @@ syscfg.defs:
         description: "ADC_2"
         value:  0
 
+    BSP_FLASH_SPI_BUS:
+        description: 'bus name SPIFLASH is connected to'
+        value: '"spi0"'
+
+    BSP_FLASH_SPI_NAME:
+        description: 'SPIFLASH device name'
+        value: '"spiflash0"'
+
     OS_TICKS_USE_RTC:
         description: >
             Use RTC as source of system ticks.
