bsp/nucleo-f7xx: Add configuration for I2S
Settings for PLLI2S that can be used for audio.
I2S clock is suitable for 48 kHz sample rate.

Code also enables I2S in ST HAL config by defining
HAL_I2S_MODULE_ENABLE

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/nucleo-f767zi/syscfg.yml
+++ b/hw/bsp/nucleo-f767zi/syscfg.yml
@@ -37,11 +37,23 @@ syscfg.vals:
     STM32_CLOCK_HSI: 0
     STM32_CLOCK_HSE: 1
     STM32_CLOCK_HSE_BYPASS: 1
+    # Input clock for all PLLs 8MHz / 8 = 1 MHz
     STM32_CLOCK_PLL_PLLM: 8
+    # VCO = 1MHz * 432 = 432 MHz
     STM32_CLOCK_PLL_PLLN: 432
+    # PLLP - PLLCLK = VCO / 2 = 216
     STM32_CLOCK_PLL_PLLP: 2
+    # PLLQ - PLL48CLK = VCO / 9 = 48
     STM32_CLOCK_PLL_PLLQ: 9
+    # PLLR - PLLDSICLK = VCO / 7 = 30.85 MHz
     STM32_CLOCK_PLL_PLLR: 7
+    STM32_CLOCK_PLLI2S_PLLN: 384
+    # PLLI2SP - SPDIFRX = 48 MHz
+    STM32_CLOCK_PLLI2S_PLLP: 8
+    # PLLI2SQ - SAICLK = 192 MHz
+    STM32_CLOCK_PLLI2S_PLLQ: 2
+    # PLLI2SR - I2SCLK = 192 MHz
+    STM32_CLOCK_PLLI2S_PLLR: 2
     STM32_CLOCK_ENABLE_OVERDRIVE: 0
     STM32_CLOCK_AHB_DIVIDER: 'RCC_SYSCLK_DIV1'
     STM32_CLOCK_APB1_DIVIDER: 'RCC_HCLK_DIV4'
