--- a/.github/workflows/check_compliance.yml
+++ b/.github/workflows/check_compliance.yml
@@ -24,7 +24,7 @@ on: [pull_request]
 jobs:
   style_check:
     name: Coding style
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v3
         with:
@@ -35,11 +35,12 @@ jobs:
              sudo apt-get install -y uncrustify
       - name: check style
         run: |
+             uncrustify --version
              .github/check_style.py
 
   license_check:
     name: Licensing
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v3
         with:
@@ -55,7 +56,7 @@ jobs:
 
   doxygen_check:
     name: Doxygen Check
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v3
         with:
