hw/bsp: Add initial support for Nucleo-H753ZI

--- a/hw/bsp/nucleo-h753zi/syscfg.yml
+++ b/hw/bsp/nucleo-h753zi/syscfg.yml
@@ -20,36 +20,36 @@
 syscfg.defs:
     STM32_FLASH_SIZE_KB:
         description: 'Total flash size in KB.'
-        value: 1024
+        value: 2048
 
     STM32_FLASH_NUM_AREAS:
         description: 'Number of flash sectors for a non-linear STM32 MCU.'
-        value: 8
+        value: 16
 
 syscfg.vals:
     MCU_RAM_START: 0x24000000
-    MCU_RAM_SIZE: 0x50000
+    MCU_RAM_SIZE: 0x80000
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
     CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
     NFFS_FLASH_AREA: FLASH_AREA_NFFS
     COREDUMP_FLASH_AREA: FLASH_AREA_IMAGE_1
     STM32_CLOCK_VOLTAGESCALING_CONFIG: 'PWR_REGULATOR_VOLTAGE_SCALE0'
     STM32_CLOCK_HSI: 1
-    STM32_CLOCK_HSE: 0
-    STM32_CLOCK_HSE_BYPASS: 0
-    STM32_CLOCK_PLL_PLLM: 4
-    STM32_CLOCK_PLL_PLLN: 34
-    STM32_CLOCK_PLL_PLLP: 1
-    STM32_CLOCK_PLL_PLLQ: 4
+    STM32_CLOCK_HSE: 1
+    STM32_CLOCK_HSE_BYPASS: 1
+    STM32_CLOCK_PLL_PLLM: 1
+    STM32_CLOCK_PLL_PLLN: 120
+    STM32_CLOCK_PLL_PLLP: 2
+    STM32_CLOCK_PLL_PLLQ: 20
     STM32_CLOCK_PLL_PLLR: 2
     STM32_CLOCK_ENABLE_OVERDRIVE: 0
     STM32_CLOCK_AHB_DIVIDER: 'RCC_HCLK_DIV2'
-    STM32_CLOCK_APB1_DIVIDER: 'RCC_APB1_DIV4'
+    STM32_CLOCK_APB1_DIVIDER: 'RCC_APB1_DIV2'
     STM32_CLOCK_APB2_DIVIDER: 'RCC_APB2_DIV2'
     STM32_CLOCK_APB3_DIVIDER: 'RCC_APB3_DIV2'
     STM32_CLOCK_APB4_DIVIDER: 'RCC_APB4_DIV2'
     STM32_CLOCK_PLLRGE: 'RCC_PLL1VCIRANGE_3'
-    STM32_FLASH_LATENCY: 'FLASH_LATENCY_3'
+    STM32_FLASH_LATENCY: 'FLASH_LATENCY_4'
     STM32_ENABLE_ICACHE: 0
     WATCHDOG_INTERVAL: 28000
     UART_0_PIN_TX: 'MCU_GPIO_PORTD(8)'
@@ -71,6 +71,6 @@ syscfg.vals:
     TIMER_2_TIM: 'TIM14'
 
     # Flasher parameters
-    MYNEWT_DOWNLOADER: stflash
+    MYNEWT_DOWNLOADER: stm32_programmer_cli
     MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x08000000
-    JLINK_TARGET: STM32H723ZG
+    JLINK_TARGET: STM32H753ZI
