--- a/hw/usb/tinyusb/msc_fat_view/pkg.yml
+++ b/hw/usb/tinyusb/msc_fat_view/pkg.yml
@@ -78,5 +78,5 @@ pkg.init.'(!BOOT_LOADER && TINYUSB_AUTO_START!=0)':
 
 pkg.init.'!BOOT_LOADER && MSC_FAT_VIEW_COREDUMP_FILES':
     msc_fat_view_coredump_pkg_init:
-        - $after:msc_fat_view_pkg_init
+        - $before:msc_fat_view_pkg_init
         - $before:tinyusb_start
