--- a/hw/drivers/lwip/stm32_eth/syscfg.yml
+++ b/hw/drivers/lwip/stm32_eth/syscfg.yml
@@ -26,3 +26,7 @@ syscfg.defs:
     STM32_MAC_ADDR:
         description: "Use given array of 6 bytes for MAC address."
         value: ((uint8_t[6]){0x00, 0x01, 0x01, 0x02, 0x02, 0x03})
+
+    STM32_ETH_RX_BUFFER_CNT:
+        description: "Number of buffers to store RX packets"
+        value: 10
