--- a/hw/bsp/b-l072z-lrwan1/syscfg.yml
+++ b/hw/bsp/b-l072z-lrwan1/syscfg.yml
@@ -17,12 +17,8 @@
 # under the License.
 #
 
-syscfg.defs:
-    STM32_FLASH_SIZE_KB:
-        description: 'Total flash size in KB.'
-        value: 192
-
 syscfg.vals:
+    STM32_FLASH_SIZE_KB: 192
     MCU_RAM_START: 0x20000000
     MCU_RAM_SIZE: 20K
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
