--- a/hw/bsp/b-l475e-iot01a/syscfg.yml
+++ b/hw/bsp/b-l475e-iot01a/syscfg.yml
@@ -18,9 +18,6 @@
 #
 
 syscfg.defs:
-    STM32_FLASH_SIZE_KB:
-        description: 'Total flash size in KB.'
-        value: 1024
     MCU_PATH:
         value: '"repos/apache-mynewt-core/hw/mcu/stm/stm32l4xx"'
 
@@ -29,6 +26,7 @@ syscfg.defs:
         value:  0
 
 syscfg.vals:
+    STM32_FLASH_SIZE_KB: 1024
     MCU_RAM_START: 0x20000000
     MCU_RAM_SIZE: 96K
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
