--- a/hw/bsp/black_vet6/syscfg.yml
+++ b/hw/bsp/black_vet6/syscfg.yml
@@ -17,14 +17,6 @@
 #
 
 syscfg.defs:
-    STM32_FLASH_SIZE_KB:
-        description: 'Total flash size in KB.'
-        value: 512
-
-    STM32_FLASH_NUM_AREAS:
-        description: 'Number of flash sectors for a non-linear STM32 MCU.'
-        value: 8
-
     STM32_ETH_PHY_TYPE:
         description: >
             PHY type that can be found in enum in file stm32_eth_cfg.h.
@@ -39,6 +31,8 @@ syscfg.defs:
         value: -1
 
 syscfg.vals:
+    STM32_FLASH_SIZE_KB: 512
+    STM32_FLASH_NUM_AREAS: 8
     MCU_RAM_START: 0x20000000
     MCU_RAM_SIZE: 128K
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
