--- a/hw/bsp/nucleo-f030r8/syscfg.yml
+++ b/hw/bsp/nucleo-f030r8/syscfg.yml
@@ -17,12 +17,8 @@
 # under the License.
 #
 
-syscfg.defs:
-    STM32_FLASH_SIZE_KB:
-        description: 'Total flash size in KB.'
-        value: 64
-
 syscfg.vals:
+    STM32_FLASH_SIZE_KB: 64
     MCU_RAM_START: 0x20000000
     MCU_RAM_SIZE: 0x2000
     INCLUDE_IMAGE_HEADER: 0
