--- a/hw/bsp/nucleo-f303re/syscfg.yml
+++ b/hw/bsp/nucleo-f303re/syscfg.yml
@@ -17,12 +17,8 @@
 # under the License.
 #
 
-syscfg.defs:
-    STM32_FLASH_SIZE_KB:
-        description: 'Total flash size in KB.'
-        value: 512
-
 syscfg.vals:
+    STM32_FLASH_SIZE_KB: 512
     MCU_RAM_START: 0x20000000
     MCU_RAM_SIZE: 64K
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
