--- a/hw/bsp/nucleo-f439zi/syscfg.yml
+++ b/hw/bsp/nucleo-f439zi/syscfg.yml
@@ -17,16 +17,9 @@
 # under the License.
 #
 
-syscfg.defs:
-    STM32_FLASH_SIZE_KB:
-        description: 'Total flash size in KB.'
-        value: 2048
-
-    STM32_FLASH_NUM_AREAS:
-        description: 'Number of flash sectors for a non-linear STM32 MCU.'
-        value: 24
-
 syscfg.vals:
+    STM32_FLASH_SIZE_KB: 2048
+    STM32_FLASH_NUM_AREAS: 24
     MCU_RAM_START: 0x20000000
     MCU_RAM_SIZE: 192K
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
