--- a/hw/bsp/stm32f3discovery/syscfg.yml
+++ b/hw/bsp/stm32f3discovery/syscfg.yml
@@ -18,10 +18,6 @@
 #
 
 syscfg.defs:
-    STM32_FLASH_SIZE_KB:
-        description: 'Total flash size in KB'
-        value: 256
-
     LSM303DLHC_ONB:
         description: 'Onboard lsm303dlhc sensor'
         value:  0
@@ -32,6 +28,7 @@ syscfg.defs:
         value: 400
 
 syscfg.vals:
+    STM32_FLASH_SIZE_KB: 256
     MCU_RAM_START: 0x20000000
     MCU_RAM_SIZE: 48K
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
