code analysis: Fix syscfg values for targets
syscfg.ymls have duplicated values BLE_MESH_SHELL and
BLE_TRANSPORT_EVT_DISCARDABLE_COUNT.

CONSOLE_STICKY_PROMPT was rename some time ago to
CONSOLE_PROMPT_STICKY
Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/targets/coverity/btshell_nrf52840_coverity2/syscfg.yml
+++ b/targets/coverity/btshell_nrf52840_coverity2/syscfg.yml
@@ -26,7 +26,6 @@ syscfg.vals:
     BLE_ROLE_OBSERVER: 1
 
     BLE_EDDYSTONE: 1
-    BLE_TRANSPORT_EVT_DISCARDABLE_COUNT: 70
     BLE_EXT_ADV: 1
     BLE_EXT_ADV_MAX_SIZE: 1650
 
@@ -64,7 +63,7 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_USB: 1
     MSYS_1_BLOCK_COUNT: 70
-    CONSOLE_STICKY_PROMPT: 1
+    CONSOLE_PROMPT_STICKY: 1
     CONSOLE_PROMPT_SOFT_CURSOR: 1
     CONSOLE_PROMPT_SOFT_CURSOR_ATTR: '"30;42m"'
     CONSOLE_UART_BAUD: 1000000
@@ -133,7 +132,6 @@ syscfg.vals:
     BLE_MESH_PB_GATT: 1
     BLE_MESH_SETTINGS: 1
     BLE_MESH_PROXY: 1
-    BLE_MESH_SHELL: 1
     BLE_MESH_GATT_PROXY: 1
     BLE_MESH_RELAY: 1
     BLE_MESH_LOW_POWER: 1
