crypto/mbedtls: Use config defining flag globally
Now -DMBEDTLS_USER_CONFIG_FILE=<mbedtls/config_mynewt.h> flag is
used globally for each build that depends on mbedtls package.
This way we won't have to add this flag in each package
that uses mbedtls.

--- a/crypto/mbedtls/pkg.yml
+++ b/crypto/mbedtls/pkg.yml
@@ -26,11 +26,14 @@ pkg.keywords:
     - tls
 pkg.type: sdk
 
-pkg.cflags:
+app.cflags:
     - '-DMBEDTLS_USER_CONFIG_FILE=<mbedtls/config_mynewt.h>'
+app.cflags.TEST:
+    - '-DTEST'
+
+pkg.cflags:
     - -Wno-maybe-uninitialized
     - -Wno-unknown-warning-option
-pkg.cflags.TEST: -DTEST
 
 pkg.include_dirs:
     - "include"
