boot/startup: Fix link problems for stm32f7/stm32h7
There was discrepancy in memory_regions.ld.h files for
few bsp's. File gave an impression that it can be
included twice in generated linker script and
second inclusion would provide definition for
region related symbols.
It may be done this way in the future but now symbols
are added in user_sections.ld.h instead.

For stm32h753 bsp was expecting symbols _dtcmram_start and
_itcmram_start while linker script provided _dtcm_start and
_itcm_start. Now later symbols are used to make it consistent
with other bsp's.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/mcu/stm/stm32f7xx/syscfg.yml
+++ b/hw/mcu/stm/stm32f7xx/syscfg.yml
@@ -134,3 +134,6 @@ syscfg.defs:
     MCU_FLASH_ERASED_VAL:
         description: Value read from erased flash.
         value: 0xff
+
+    MCU_PATH:
+        value: '"repos/apache-mynewt-core/hw/mcu/stm/stm32f7xx"'
