mcu/nrf5340: Add option to use common cortex startup
NRF53 based devices now can use common cortex startup code
and and auto generated linker script.

Older way is still working. Local linker scripts can be
removed from repository later.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/mcu/nordic/nrf5340/pkg.yml
+++ b/hw/mcu/nordic/nrf5340/pkg.yml
@@ -113,5 +113,8 @@ pkg.cflags.MCU_NRF5340_EN_APPROTECT_USERHANDLING:
 pkg.deps.MCU_DEFAULT_STARTUP:
     - "@apache-mynewt-core/hw/mcu/nordic/nrf5340/startup"
 
+pkg.deps.CORTEX_DEFAULT_STARTUP:
+    - "@apache-mynewt-core/boot/startup"
+
 pkg.deps.MCU_MPU_ENABLE:
     - "@apache-mynewt-core/hw/mcu/nordic/nrf5340/mpu"
