--- a/hw/mcu/nordic/nrf5340/syscfg.yml
+++ b/hw/mcu/nordic/nrf5340/syscfg.yml
@@ -140,6 +140,18 @@ syscfg.defs:
             Include default startup code.
             Set to 0 if BSP provides customized startup code.
         value: 1
+        restrictions:
+            - '!CORTEX_DEFAULT_STARTUP if 1'
+
+    CORTEX_DEFAULT_STARTUP:
+        description: >
+            Include mynewt default startup code for Cortex.
+        value: 0
+        restrictions:
+            - '!MCU_DEFAULT_STARTUP if 1'
+
+    MCU_PATH:
+        value: '"repos/apache-mynewt-core/hw/mcu/nordic/nrf5340"'
 
 # MCU peripherals definitions
     ADC_0:
@@ -581,6 +593,10 @@ syscfg.defs:
 
 syscfg.vals:
     OS_TICKS_PER_SEC: 128
+
+syscfg.vals.CORTEX_DEFAULT_STARTUP:
+    MCU_RAM_START: 0x20000000
+    MCU_RAM_SIZE: 0x80000
 
 syscfg.restrictions:
     - "!UART_0 || (UART_0_PIN_TX != -1 && UART_0_PIN_RX != -1)"
