boot/startup: Add optional stack fill in startup
Code was already present in default startup code for NRF5340.
Now is available for all devices with common startup.

It allows to verify real main stack requirements (interrupt
stack) and stack used in bootloader.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/boot/startup/syscfg.yml
+++ b/boot/startup/syscfg.yml
@@ -34,6 +34,11 @@ syscfg.defs:
             For bootloader it's main stack, for application this stack is used by interrupts
             and exceptions.
         value: 768
+    MAIN_STACK_FILL:
+        description: >
+            Fill main stack (interrupt stack) with pattern on startup.
+            If not 0, value will be used as a pattern.
+        value: 0
     INCLUDE_IMAGE_HEADER:
         description: Add image header to generated executable.
         value: 1
