hw/stm32u5: Fix clock settings
Few minor changes:
- U5 does not have APB4 bus (settings removed from BSP)
- ABP3 presacler was now configurable in syscfg
- STM32_CLOCK_ENABLE_OVERDRIVE is not applicable fot U5
- descriptions of AHB and APB syscfg was incorrect
- PLLREG was not configurable even though BSP had some
  inactive setting

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/mcu/stm/stm32u5xx/syscfg.yml
+++ b/hw/mcu/stm/stm32u5xx/syscfg.yml
@@ -99,6 +99,10 @@ syscfg.defs:
         description: PLL config R parameter
         value: 0
 
+    STM32_CLOCK_PLL_PLLRGE:
+        description: PLL input frequency range
+        value: RCC_PLLVCIRANGE_0
+
     STM32_CLOCK_PLL_BOOST_DIV:
         description: >
             Divider for PLL boost required when target SYSCLK > 55MHz.
@@ -108,15 +112,19 @@ syscfg.defs:
         value: RCC_PLLMBOOST_DIV1
 
     STM32_CLOCK_AHB_DIVIDER:
-        description: AHB CLK1 prescaler (80MHz max)
+        description: AHB CLK1 prescaler (AHB 160MHz max)
         value: 0
 
     STM32_CLOCK_APB1_DIVIDER:
-        description: APB low-speed prescaler (80MHz max)
+        description: APB prescaler (APB1 160MHz max)
         value: 0
 
     STM32_CLOCK_APB2_DIVIDER:
-        description: APB high-speed prescaler (80MHz max)
+        description: APB prescaler (APB2 160MHz max)
+        value: 0
+
+    STM32_CLOCK_APB3_DIVIDER:
+        description: APB prescaler (APB3 160MHz max)
         value: 0
 
     STM32_FLASH_LATENCY:
