--- a/hw/bsp/nucleo-u575zi-q/syscfg.yml
+++ b/hw/bsp/nucleo-u575zi-q/syscfg.yml
@@ -32,13 +32,11 @@ syscfg.vals:
     STM32_CLOCK_PLL_PLLP: 2
     STM32_CLOCK_PLL_PLLQ: 2
     STM32_CLOCK_PLL_PLLR: 2
-    STM32_CLOCK_ENABLE_OVERDRIVE: 0
+    STM32_CLOCK_PLL_PLLRGE: 'RCC_PLLVCIRANGE_0'
     STM32_CLOCK_AHB_DIVIDER: 'RCC_SYSCLK_DIV1'
     STM32_CLOCK_APB1_DIVIDER: 'RCC_HCLK_DIV1'
     STM32_CLOCK_APB2_DIVIDER: 'RCC_HCLK_DIV1'
     STM32_CLOCK_APB3_DIVIDER: 'RCC_HCLK_DIV1'
-    STM32_CLOCK_APB4_DIVIDER: 'RCC_HCLK_DIV1'
-    STM32_CLOCK_PLLRGE: 'RCC_PLLVCIRANGE_0'
     STM32_FLASH_LATENCY: 'FLASH_LATENCY_4'
     WATCHDOG_INTERVAL: 28000
     UART_0_PIN_TX: 'MCU_GPIO_PORTA(9)'
