tinyusb/msc_fat_view: Add entry for BOOT.BIN
This allows to show booloader in fat view.
When enabled by MSC_FAT_VIEW_BOOT_BIN fat
view is populated with BOOT.BIN that can
be easily extracted if needed.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/usb/tinyusb/msc_fat_view/pkg.yml
+++ b/hw/usb/tinyusb/msc_fat_view/pkg.yml
@@ -56,6 +56,9 @@ pkg.source_files.MSC_FAT_VIEW_HUGE_FILE:
 pkg.source_files.MSC_FAT_VIEW_SLOT0_IMAGE:
     - src/entry_slot0.c
 
+pkg.source_files.MSC_FAT_VIEW_BOOT_BIN:
+    - src/entry_boot_bin.c
+
 pkg.source_files.MSC_FAT_VIEW_SLOT0_HEX:
     - src/entry_slot0_hex.c
 
