tinyusb: Add support for STM32H7 devices
Hardware configuration for synopsys IP based devices
used OTG FS device. For H7 devices some have only one
USB peripheral and it's HS.

Now syscfg explicitly selects which peripheral should
be used.
When USB_USE_OTG_HS is 0 OTG_FS will be used
When USB_USE_OTG_HS is 1 OTG_HS will be selected

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/nucleo-h723zg/syscfg.yml
+++ b/hw/bsp/nucleo-h723zg/syscfg.yml
@@ -62,6 +62,7 @@ syscfg.vals:
     TIMER_0_TIM: 'TIM12'
     TIMER_1_TIM: 'TIM13'
     TIMER_2_TIM: 'TIM14'
+    USB_USE_OTG_HS: 1
 
     # Flasher parameters
     MYNEWT_DOWNLOADER: stflash
