--- a/hw/bsp/nordic_pca10121/net/syscfg.yml
+++ b/hw/bsp/nordic_pca10121/net/syscfg.yml
@@ -84,3 +84,16 @@ syscfg.vals.BLE_CONTROLLER:
 
 syscfg.vals.BLE_TRANSPORT:
     BLE_TRANSPORT_HS: nrf5340
+
+syscfg.vals.'BLE_TRANSPORT_HS=="ipc" || BLE_TRANSPORT_IPC_BACKEND=="icbmsg"':
+    # The APP core have the same values but switched directions
+    BLE_TRANSPORT_IPC_TX_CHANNEL: 1
+    BLE_TRANSPORT_IPC_RX_CHANNEL: 0
+    IPC_SYNC_TX_CHANNEL: 1
+    IPC_SYNC_RX_CHANNEL: 0
+    IPC_ICBMSG_TX_REGION_NAME: "\".ipc0_rx\""
+    IPC_ICBMSG_RX_REGION_NAME: "\".ipc0_tx\""
+    IPC_ICBMSG_NUM_TX_BLOCKS: 24
+    IPC_ICBMSG_NUM_RX_BLOCKS: 16
+    IPC_ICBMSG_TX_REGION_SIZE: 0x4000
+    IPC_ICBMSG_RX_REGION_SIZE: 0x4000
