lvgl/st7796s: Add initial support for ST7796S TFT
Initial support for ST7798S displays with
320x480 resolution.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/drivers/display/lvgl/pkg.yml
+++ b/hw/drivers/display/lvgl/pkg.yml
@@ -68,6 +68,8 @@ pkg.deps.LVGL_ST7735S:
     - "@apache-mynewt-core/hw/drivers/display/lvgl/tft/st7735s"
 pkg.deps.LVGL_ST7789:
     - "@apache-mynewt-core/hw/drivers/display/lvgl/tft/st7789"
+pkg.deps.LVGL_ST7796S:
+    - "@apache-mynewt-core/hw/drivers/display/lvgl/tft/st7796S"
 
 pkg.deps.LVGL_CST816S:
     - "@apache-mynewt-core/hw/drivers/display/lvgl/indev/cst816s"
