sys/shell: Add macros for creating link time commands
Shell commands and modules used to be registered at
run time by packages. This required code and RAM space.
Both shell modules and commands required RAM of some fixed
size (specified in syscfg). When more commands or shell
modules were registered assertion failed at run time.

Now it's possibly to create shell commands that will be
'registered' at link time and will not require RAM
nor explicit function call.
This should eliminate problem of registering to
many modules or commands.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/sys/shell/pkg.yml
+++ b/sys/shell/pkg.yml
@@ -39,5 +39,11 @@ pkg.deps.SHELL_BRIDGE:
 pkg.req_apis:
     - console
 
+pkg.whole_archive: true
+
+pkg.link_tables:
+    - shell_modules
+    - compat_commands
+
 pkg.init:
     shell_init: 'MYNEWT_VAL(SHELL_SYSINIT_STAGE)'
