test/flash_test: Register commands statically
Now flash_test commands are register at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/test/flash_test/pkg.yml
+++ b/test/flash_test/pkg.yml
@@ -30,5 +30,4 @@ pkg.deps:
 pkg.req_apis:
     - console
 
-pkg.init:
-    flash_test_init: 'MYNEWT_VAL(FLASH_TEST_SYSINIT_STAGE)'
+pkg.whole_archive: true
