util/coremark: Register commands statically
Now coremark shell commands are register at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/util/coremark/pkg.yml
+++ b/util/coremark/pkg.yml
@@ -33,11 +33,10 @@ pkg.deps:
 
 pkg.cflags:
 
+pkg.whole_archive: true
+
 pkg.source_files:
     - src/core_portme.c
 
 pkg.source_files.COREMARK_SHELL:
     - src/coremark_shell.c
-
-pkg.init.COREMARK_SHELL:
-    coremark_shell_init_pkg: $after:shell_init
