test/crash_test: Register commands statically
Now crash shell commands are register at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/test/crash_test/pkg.yml
+++ b/test/crash_test/pkg.yml
@@ -31,5 +31,7 @@ pkg.deps.CRASH_TEST_MGMT:
     - "@apache-mynewt-core/encoding/json"
     - "@apache-mynewt-mcumgr/cborattr"
 
+pkg.whole_archive: true
+
 pkg.init:
     crash_test_init: 'MYNEWT_VAL(CRASH_TEST_SYSINIT_STAGE)'
