mgmt/imgmgr: Register commands statically
Now imgr shell command is register at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/mgmt/imgmgr/pkg.yml
+++ b/mgmt/imgmgr/pkg.yml
@@ -45,5 +45,7 @@ pkg.deps.IMGMGR_CLI:
     - "@apache-mynewt-core/sys/shell"
     - "@apache-mynewt-core/util/parse"
 
+pkg.whole_archive: true
+
 pkg.init:
     imgmgr_module_init: 'MYNEWT_VAL(IMGMGR_SYSINIT_STAGE)'
