tinyusb: Register shell module statically
Now usb shell module is register at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/usb/tinyusb/shell/pkg.yml
+++ b/hw/usb/tinyusb/shell/pkg.yml
@@ -29,5 +29,4 @@ pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/usb/tinyusb"
 
-pkg.init:
-    tinyusb_cli_init: 'MYNEWT_VAL(SHELL_SYSINIT_STAGE) + 1'
+pkg.whole_archive: true
