sys/fault: Register command statically
Now fault shell command is register at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/sys/fault/fault_cli/pkg.yml
+++ b/sys/fault/fault_cli/pkg.yml
@@ -28,5 +28,4 @@ pkg.deps:
     - "@apache-mynewt-core/sys/shell"
     - "@apache-mynewt-core/util/parse"
 
-pkg.init:
-    fault_cli_init: 'MYNEWT_VAL(FAULT_CLI_SYSINIT_STAGE)'
+pkg.whole_archive: true
