test/i2c_scan: Register command statically
Now i2c_scan shell command is register at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/test/i2c_scan/pkg.yml
+++ b/test/i2c_scan/pkg.yml
@@ -31,5 +31,4 @@ pkg.deps:
 pkg.req_apis:
     - console
 
-pkg.init:
-    i2c_scan_init: 'MYNEWT_VAL(I2C_SCAN_SYSINIT_STAGE)'
+pkg.whole_archive: true
