stm32f4/mcu_cli: Register shell module statically
Now mcu shell module is register at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/mcu/stm/stm32f4xx/mcu_cli/pkg.yml
+++ b/hw/mcu/stm/stm32f4xx/mcu_cli/pkg.yml
@@ -31,5 +31,4 @@ pkg.deps:
 pkg.req_apis:
     - console
 
-pkg.init:
-    mcu_cli_init: 'MYNEWT_VAL(MCU_CLI_SYSINIT_STAGE)'
+pkg.whole_archive: true
