--- a/hw/mcu/stm/stm32f1xx/mcu_cli/pkg.yml
+++ b/hw/mcu/stm/stm32f1xx/mcu_cli/pkg.yml
@@ -28,5 +28,4 @@ pkg.deps:
 pkg.req_apis:
     - console
 
-pkg.init:
-    mcu_cli_init: 'MYNEWT_VAL(MCU_CLI_SYSINIT_STAGE)'
+pkg.whole_archive: true
