drivers/bq27z561: Register command statically
Now BQ27Z561 shell command is registered at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/drivers/bq27z561/pkg.yml
+++ b/hw/drivers/bq27z561/pkg.yml
@@ -38,8 +38,8 @@ pkg.deps.BUS_DRIVER_PRESENT:
 pkg.req_apis:
     - stats
 
+pkg.whole_archive: true
+
 pkg.deps.BQ27Z561_CLI:
     - "@apache-mynewt-core/util/parse"
 
-pkg.init:
-    bq27z561_pkg_init: 'MYNEWT_VAL(BQ27Z561_SYSINIT_STAGE)'
