--- a/hw/drivers/sensors/ina226/pkg.yml
+++ b/hw/drivers/sensors/ina226/pkg.yml
@@ -33,8 +33,7 @@ pkg.deps:
 pkg.req_apis:
     - stats
 
+pkg.whole_archive: true
+
 pkg.deps.INA226_CLI:
     - "@apache-mynewt-core/util/parse"
-
-pkg.init.INA226_CLI:
-    ina226_shell_init: 'MYNEWT_VAL(INA226_CLI_SYSINIT_STAGE)'
