hw/battery: Register module statically
Now bat shell module is registered at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/battery/pkg.yml
+++ b/hw/battery/pkg.yml
@@ -28,5 +28,7 @@ pkg.deps:
 pkg.req_apis:
     - console
 
+pkg.whole_archive: true
+
 pkg.init:
     battery_pkg_init: 'MYNEWT_VAL(BATTERY_SYSINIT_STAGE)'
