ci: Add GitHub Actions workflow for clang-format
Adds a GitHub Actions job that runs clang-format on code diffs.
Reports only style issues in changed lines.
Skips check if no relevant changes are found.

--- a/.github/workflows/check_compliance.yml
+++ b/.github/workflows/check_compliance.yml
@@ -24,19 +24,34 @@ on: [pull_request]
 jobs:
   style_check:
     name: Coding style
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-      - name: Install Dependencies
+          fetch-depth: 0  # Required to get full history for diff
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      - name: Install clang-format
         run: |
-             sudo apt-get update
-             sudo apt-get install -y uncrustify
-      - name: check style
+          sudo apt-get update
+          sudo apt-get install -y clang-format
+
+      - name: Check formatting (diff only)
         run: |
-             uncrustify --version
-             .github/check_style.py
+          git diff -U0 origin/master...HEAD > diff.patch
+          clang-format-diff -p1 -style=file < diff.patch > clang-fmt.patch
+          if [ -s clang-fmt.patch ]; then
+            echo "Code formatting issues found:"
+            cat clang-fmt.patch
+            exit 1
+          else
+            echo "All good, no formatting issues."
+          fi
 
   license_check:
     name: Licensing
