net/lora: Register commands statically
Now loar shell commands are registered at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/net/lora/node/pkg.yml
+++ b/net/lora/node/pkg.yml
@@ -41,5 +41,7 @@ pkg.deps.LORA_NODE_LOG_CLI:
 pkg.req_apis:
     - lora_node_driver
 
+pkg.whole_archive: true
+
 pkg.init:
     lora_node_init: 'MYNEWT_VAL(LORA_NODE_SYSINIT_STAGE)'
