drivers/adp5061: Register command statically
Now adp5061 shell command is registered at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/drivers/chg_ctrl/adp5061/pkg.yml
+++ b/hw/drivers/chg_ctrl/adp5061/pkg.yml
@@ -39,3 +39,5 @@ pkg.deps.!BUS_DRIVER_PRESENT||ADP5061_USE_CHARGE_CONTROL:
 pkg.deps.ADP5061_CLI:
     - '@apache-mynewt-core/sys/shell'
     - '@apache-mynewt-core/util/parse'
+
+pkg.whole_archive: true
