drivers/lsm6dso: Register command statically
Now lsm6dso shell command is registered at link time to
reduce memory footprint.
Command was register before by function lsm6dso_shell_init()
that is not removed and replaced by syscfg value LSM6DSO_SHELL

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/drivers/sensors/lsm6dso/pkg.yml
+++ b/hw/drivers/sensors/lsm6dso/pkg.yml
@@ -33,3 +33,11 @@ pkg.deps:
 
 pkg.req_apis:
     - stats
+
+pkg.source_files:
+    - src/lsm6dso.c
+
+pkg.source_files.LSM6DSO_SHELL:
+    - src/lsm6dso_shell.c
+
+pkg.whole_archive: true
