drivers/ds3231: Register command statically
Now ds3231 shell command is registered at link time to
reduce memory footprint.
No change in functionality.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/drivers/rtc/ds3231/pkg.yml
+++ b/hw/drivers/rtc/ds3231/pkg.yml
@@ -36,5 +36,10 @@ pkg.req_apis:
 pkg.init:
     ds3231_pkg_init: 601
 
-pkg.init.DS3231_CLI:
-    ds3231_shell_init: 1000
+pkg.whole_archive: true
+
+pkg.source_files:
+    - src/ds3231.c
+
+pkg.source_files.DS3231_CLI:
+    - src/ds3231_shell.c
