drivers/bmp280: Register command statically
Now bmp280 shell command is registered at link time to
reduce memory footprint.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/drivers/sensors/bmp280/pkg.yml
+++ b/hw/drivers/sensors/bmp280/pkg.yml
@@ -42,5 +42,13 @@ pkg.deps.BUS_DRIVER_PRESENT:
 pkg.req_apis:
     - stats
 
+pkg.whole_archive: true
+
+pkg.source_files:
+    - src/bmp280.c
+
+pkg.source_files.BMP280_CLI:
+    - src/bmp280_shell.c
+
 pkg.deps.BMP280_CLI:
     - "@apache-mynewt-core/util/parse"
