drivers/adxl345: Register command statically
Now adxl345 shell command is registered at link time to
reduce memory footprint.
Command was register before by function adxl345_shell_init()
Now command is added when syscfg value ADXL345_CLI is 1

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/drivers/sensors/adxl345/pkg.yml
+++ b/hw/drivers/sensors/adxl345/pkg.yml
@@ -37,5 +37,13 @@ pkg.deps:
 pkg.req_apis:
     - stats
 
+pkg.whole_archive: true
+
+pkg.srouce_files:
+    - src/ds1307.c
+
+pkg.srouce_files.ADXL345_CLI:
+    - src/ds1307_shell.c
+
 pkg.deps.ADXL345_CLI:
     - "@apache-mynewt-core/util/parse"
