ci: Update style check workflow to run on ubuntu-24.04
Changed the GitHub Actions runner from ubuntu-latest to ubuntu-24.04
to ensure compatibility and consistency with the project environment.

--- a/.github/workflows/check_compliance.yml
+++ b/.github/workflows/check_compliance.yml
@@ -24,7 +24,7 @@ on: [pull_request]
 jobs:
   style_check:
     name: Coding style
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
