--- a/.github/workflows/check_compliance.yml
+++ b/.github/workflows/check_compliance.yml
@@ -45,11 +45,15 @@ jobs:
         shell: bash
         run: |
           set +e
+          INFO_URL="https://github.com/apache/mynewt-core/blob/master/CODING_STANDARDS.md"
           git diff -U0 origin/master...HEAD > diff.patch
           clang-format-diff -p1 -style=file < diff.patch > clang-fmt.patch
           if [ -s clang-fmt.patch ]; then
             echo "Code formatting issues found:"
             cat clang-fmt.patch
+            echo ""
+            echo "For formatting guidelines, see:"
+            echo "  $INFO_URL"
             exit 1
           else
             echo "All good, no formatting issues."
