tinyusb/msc_fat_view: Configure root dir sector count
One sector for root dir entry was hardcoded.
It could be to small if additional entries were added.
In that case firmware update could be impossible
if Windows of Linux could not fit new file name
in root directory.

Now root director sector count is configurable
in syscfg.yml by MSC_FAT_VIEW_ROOT_DIR_SECTORS

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/usb/tinyusb/msc_fat_view/syscfg.yml
+++ b/hw/usb/tinyusb/msc_fat_view/syscfg.yml
@@ -38,6 +38,10 @@ syscfg.defs:
             Auto-confirm image when directory is read after reboot.
         value: 1
 
+    MSC_FAT_VIEW_ROOT_DIR_SECTORS:
+        description: >
+            Number of sectors for root directory.
+        value: 3
     MSC_FAT_VIEW_COREDUMP_FILES:
         description: >
             Adds coredump files (if present) to root directory.
