fs: Introduce file system entity
File system was represented by fs_ops that consisted of
bunch of file system functions, name, and pointer to
link file system ops in chain.

Most of the date was constant and there is was no reason
to waste RAM for callback pointer.

This introduce file_system object that has ops but
can be extended to hold file system specific data.

Same file system ops can be used for more then one file
system.
File system can be mounted and that what littlefs and other
file systems will.

This change mostly changes filesystem_ops to const in most
places.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/fs/fs/syscfg.yml
+++ b/fs/fs/syscfg.yml
@@ -27,6 +27,13 @@ syscfg.defs:
         description: 'Enables file system mgmt commands.'
         value: 0
 
+    FS_MAX_MOUNT_POINTS:
+        description: >
+            Number of mount point tha can be used.
+            There should be one mount point for each file system that
+            could be mounted.
+        value: 2
+
     FS_UPLOAD_MAX_CHUNK_SIZE:
         description: >
             The maximum amount of file data that can fit in a
