fs/fatfs: Rework to use file system api
This adds file disk listener that can mount fatfs
disk (like sdcard) if it contains FAT data.

Fixes problem with accessing disk grater then 2GB.
Previous disk interface (that is now removed) used
32 bit to address bytes of disk.
Now disk access uses sectors as it the code for disk.

Further more file name conversion from sd0: to 0: is
now removed. FATFS driver wants to use 0: volumes
and mynewt wanted to have sd0:
Now disk will be mounted as 0: removing need for
conversion and heap allocations.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/fs/fatfs/pkg.yml
+++ b/fs/fatfs/pkg.yml
@@ -30,11 +30,11 @@ pkg.deps:
     - "@apache-mynewt-core/util/crc"
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/kernel/os"
-    - "@apache-mynewt-core/test/testutil"
-    - "@apache-mynewt-core/sys/flash_map"
 pkg.req_apis:
     - log
     - stats
 
-pkg.init:
-    fatfs_pkg_init: 'MYNEWT_VAL(FATFS_SYSINIT_STAGE)'
+pkg.whole_archive: true
+
+pkg.cflags:
+    - -Wno-unused-variable
