ci: Add information about skipping style check
If skip-style-check label is present print information
about skipping the workflow.

--- a/.github/workflows/check_compliance.yml
+++ b/.github/workflows/check_compliance.yml
@@ -77,6 +77,10 @@ jobs:
             echo "All good, no formatting issues."
           fi
 
+      - name: Skip style-check if label present
+        if: steps.label_check.outputs.skip == 'true'
+        run: echo "Skipping style check because 'skip-style-check' label is present."
+
   license_check:
     name: Licensing
     runs-on: ubuntu-24.04
