bsp/nucleo-gxxxx: Fix config fcb settings
Default value for CONFIG_FCB_NUM_AREAS is 10.
Flash area used by config_fcb on this board
has 32kB in 16 sectors.
This results in an assert.

Now CONFIG_FCB_NUM_AREAS is change to 16 for this
board.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/nucleo-g491re/syscfg.yml
+++ b/hw/bsp/nucleo-g491re/syscfg.yml
@@ -64,3 +64,6 @@ syscfg.vals:
     MYNEWT_DOWNLOADER: stm32_programmer_cli
     MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x0C000000
     JLINK_TARGET: STM32G491RE
+
+syscfg.vals.CONFIG_FCB:
+    CONFIG_FCB_NUM_AREAS: 16
