--- a/hw/bsp/nucleo-g0b1re/syscfg.yml
+++ b/hw/bsp/nucleo-g0b1re/syscfg.yml
@@ -62,3 +62,6 @@ syscfg.vals:
     MYNEWT_DOWNLOADER: stm32_programmer_cli
     MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x0C000000
     JLINK_TARGET: STM32G0B1RE
+
+syscfg.vals.CONFIG_FCB:
+    CONFIG_FCB_NUM_AREAS: 16
