bsp/native: Add linker script for link tables
Default linker script does not allow to use
mynewt link tables.

This provides scripts that provides support
for link tables.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/native/bsp.yml
+++ b/hw/bsp/native/bsp.yml
@@ -21,6 +21,7 @@ bsp.arch: sim
 bsp.exclude_site: 1
 bsp.compiler: compiler/sim
 bsp.debugscript: "hw/bsp/native/native_debug.sh"
+bsp.linkerscript: "hw/bsp/native/native.ld"
 
 bsp.flash_map:
     areas:
