hw/bsp: Disable UART in bootloader
Due to mcuboot upgrade size of the bootladers increased.
This changed bsps that would no longer feed in to bootloader
flash area by disabling uart 0.

--- a/hw/bsp/nucleo-f401re/syscfg.yml
+++ b/hw/bsp/nucleo-f401re/syscfg.yml
@@ -53,3 +53,6 @@ syscfg.vals:
     I2C_0_PIN_SCL: 'MCU_GPIO_PORTB(8)'
     I2C_0_PIN_SDA: 'MCU_GPIO_PORTB(9)'
     TIMER_0_TIM: 'TIM9'
+
+syscfg.vals.BOOT_LOADER: 
+    UART_0: 0
