--- a/hw/bsp/nucleo-l476rg/syscfg.yml
+++ b/hw/bsp/nucleo-l476rg/syscfg.yml
@@ -77,3 +77,6 @@ syscfg.vals:
     MYNEWT_DOWNLOADER: stflash
     MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x08000000
     JLINK_TARGET: STM32L476RG
+
+syscfg.vals.BOOT_LOADER: 
+    UART_0: 0
