--- a/hw/bsp/nucleo-f411re/syscfg.yml
+++ b/hw/bsp/nucleo-f411re/syscfg.yml
@@ -64,3 +64,6 @@ syscfg.vals:
     MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x08000000
     PYOCD_TARGET: stm32f412xe
     JLINK_TARGET: STM32F411RE
+
+syscfg.vals.BOOT_LOADER: 
+    UART_0: 0
