hw/bsp: replace deprecated stlink-v2/v2-1.cfg with stlink.cfg
Replaced all occurrences of stlink-v2.cfg and stlink-v2-1.cfg
with stlink.cfg to eliminate warnings during openocd initialization.

These files are no longer recommended.
New stlink.cfg replaces them and automatically detects the ST-LINK
version.

Tested with OpenOCD version 0.12.

Warning example:
WARNING: interface/stlink-v2-1.cfg is deprecated, please switch
to interface/stlink.cfg

--- a/hw/bsp/bluepill/bluepill.cfg
+++ b/hw/bsp/bluepill/bluepill.cfg
@@ -15,6 +15,6 @@
 # specific language governing permissions and limitations
 # under the License.
 
-source [find interface/stlink-v2.cfg]
+source [find interface/stlink.cfg]
 
 source [find target/stm32f1x.cfg]
