--- a/hw/bsp/nucleo-f746zg/syscfg.yml
+++ b/hw/bsp/nucleo-f746zg/syscfg.yml
@@ -66,6 +66,6 @@ syscfg.vals:
     TIMER_2_TIM: 'TIM11'
     MYNEWT_DOWNLOADER: openocd
     MYNEWT_DOWNLOADER_OPENOCD_CFG: nucleo-f746zg.cfg
-    MYNEWT_DOWNLOADER_OPENOCD_INTERFACE: interface/stlink-v2-1.cfg
+    MYNEWT_DOWNLOADER_OPENOCD_INTERFACE: interface/stlink.cfg
     MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x08000000
     JLINK_TARGET: STM32F746ZG
