--- a/hw/bsp/stm32f4discovery/f4discovery.cfg
+++ b/hw/bsp/stm32f4discovery/f4discovery.cfg
@@ -17,6 +17,6 @@
 # under the License.
 
 # New version of St-link
-source [find interface/stlink-v2-1.cfg]
+source [find interface/stlink.cfg]
 transport select hla_swd
 source [find target/stm32f4x.cfg]
