--- a/hw/bsp/b-l072z-lrwan1/b-l072z-lrwan1.cfg
+++ b/hw/bsp/b-l072z-lrwan1/b-l072z-lrwan1.cfg
@@ -18,7 +18,7 @@
 #
 
 # https://www.st.com/en/evaluation-tools/b-l072z-lrwan1.html
-source [find interface/stlink-v2-1.cfg]
+source [find interface/stlink.cfg]
 
 transport select hla_swd
 
