--- a/hw/bsp/ble400/ble400.cfg
+++ b/hw/bsp/ble400/ble400.cfg
@@ -16,7 +16,7 @@
 # specific language governing permissions and limitations
 # under the License.
 
-source [find interface/stlink-v2.cfg]
+source [find interface/stlink.cfg]
 transport select hla_swd
 set WORKAREASIZE 0x4000
 source [find target/nrf51.cfg]
