--- a/hw/bsp/nucleo-f767zi/syscfg.yml
+++ b/hw/bsp/nucleo-f767zi/syscfg.yml
@@ -74,7 +74,7 @@ syscfg.vals:
     TIMER_2_TIM: 'TIM11'
     MYNEWT_DOWNLOADER: openocd
     MYNEWT_DOWNLOADER_OPENOCD_CFG: nucleo-f767zi.cfg
-    MYNEWT_DOWNLOADER_OPENOCD_INTERFACE: interface/stlink-v2-1.cfg
+    MYNEWT_DOWNLOADER_OPENOCD_INTERFACE: interface/stlink.cfg
     MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x08000000
     PYOCD_TARGET: stm32f767zi
     JLINK_TARGET: STM32F767ZI
