--- a/hw/bsp/stm32f7discovery/syscfg.yml
+++ b/hw/bsp/stm32f7discovery/syscfg.yml
@@ -49,6 +49,6 @@ syscfg.vals:
     TIMER_2_TIM: 'TIM9'
     MYNEWT_DOWNLOADER: openocd
     MYNEWT_DOWNLOADER_OPENOCD_CFG: stm32f7discovery.cfg
-    MYNEWT_DOWNLOADER_OPENOCD_INTERFACE: interface/stlink-v2-1.cfg
+    MYNEWT_DOWNLOADER_OPENOCD_INTERFACE: interface/stlink.cfg
     MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x08000000
     JLINK_TARGET: STM32F746NG
