hw/mcu: Add watchdog support for apollo2 with configurable clock
This commit adds watchdog timer support for Apollo2-based boards.
Apollo2 microcontrollers allow selecting different WDT clock
frequencies. To enable this feature, a new configuration variable
is introduced: AM_WATCHDOG_CLOCK.

You can set AM_WATCHDOG_CLOCK to one of the supported values:
- 1 (default)
- 16
- 128

The clock affects how long the watchdog timeout can be, since
the hardware register for reset timeout is 8 bit.
This means:
- for 128Hz, max timeout ~ 2 seconds
- for 16Hz, max timeout ~ 16 seconds
- for 1Hz, max timeout 255 seconds

If you choose a higher clock, you must decrease the interval
values accordingly. Two other config variables should be
adjusted based on the selected clock:
- SANITY_INTERVAL
- WATCHDOG_INTERVAL

Example for syscfg.vals in an app or target:
 syscfg.vals:
     AM_WATCHDOG_CLOCK: 16
     SANITY_INTERVAL: 1000
     WATCHDOG_INTERVAL: 5000

--- a/hw/bsp/apollo2_evb/syscfg.yml
+++ b/hw/bsp/apollo2_evb/syscfg.yml
@@ -96,6 +96,10 @@ syscfg.defs:
     SPI_5_MASTER_PIN_MISO:
         description: 'MISO pin for SPI_5_MASTER'
         value:  49
+    AM_WATCHDOG_CLOCK:
+        description: "Watchdog clock frequency in Hz"
+        value: 1
+        range: 1, 16, 128
 
 syscfg.vals:
     CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
