hw/scripts: Add adapter selection via syscfg.yml
Added option for selecting USB serial of a debug probe
via syscfg.vals in targets syscfg.yml file.

This was achieved by addition of following definition
to hw/scripts/syscfg.yml file:
    MYNEWT_DEBUGGER_SN
and use of its value in scripts.

This removes the need of manual choosing target device
everytime load is called, by having serial number value
in targets syscfg.yml file.
This value will be used, when environment variable
is missing.

--- a/hw/scripts/syscfg.yml
+++ b/hw/scripts/syscfg.yml
@@ -90,3 +90,7 @@ syscfg.defs:
             It can be 'nordicDfu' to upload binary using Nordic SDK DFU
             bootloader protocol.
         value:
+    MYNEWT_DEBUGGER_SN:
+        description: >
+            Debugger serial number to use for flash
+        value:
