--- a/hw/sensor/creator/syscfg.yml
+++ b/hw/sensor/creator/syscfg.yml
@@ -294,8 +294,30 @@ syscfg.defs:
     BMA2XX_OFB:
         description: 'A sensor in the BMA2XX family is present'
         value : 0
-    BMP388_OFB:
-        description: 'A sensor in the BMP388 family is present'
+    BMP5_OFB:
+        description: 'A sensor in the BMP5 family is present'
+        value : 0
+    BMP5_OFB_I2C_NUM:
+        description: 'I2C interface used for BMP5'
+        value: 0
+        restrictions:
+         - '(BMP5_OFB == 0) ||
+            ((BMP5_OFB_I2C_NUM == 0) && (I2C_0 == 1)) ||
+            ((BMP5_OFB_I2C_NUM == 1) && (I2C_1 == 1)) ||
+            ((BMP5_OFB_I2C_NUM == 2) && (I2C_2 == 1)) ||
+            ((BMP5_OFB_I2C_NUM == -1))'
+    BMP5_OFB_BUS:
+        description: 'I2C interface used for BMP5'
+        value: '"i2c0"'
+    BMP5_OFB_I2C_ADDR:
+        description: 'I2C address of BMP5 0x46 or 0x47'
+        value: 0x47
+        range: 0x46,0x47
+    BMP5_OFB_INT_PIN:
+        description: 'Host interrupt pin for BMP5'
+        value: 21
+    BMP5_OFB:
+        description: 'A sensor in the BMP5 family is present'
         value : 0
     BMP388_OFB_I2C_NUM:
         description: 'I2C interface used for BMP388'
