--- a/apps/sensors_test/syscfg.yml
+++ b/apps/sensors_test/syscfg.yml
@@ -49,6 +49,7 @@ syscfg.vals:
     TCS34725_CLI: 0
     BME280_CLI: 0
     BMA2XX_CLI: 0
+    BMP5_CLI: 0
 
     # Setup Sensor BLE OIC GATT Server
     SENSOR_OIC: 1
