hw/scripts: Add custom downloader script option
This changed give possibility to use downloader script specified
as MYNEWT_DOWNLOADER_SCRIPT value in syscfg.yml

--- a/hw/scripts/syscfg.yml
+++ b/hw/scripts/syscfg.yml
@@ -38,6 +38,11 @@ syscfg.defs:
             - nrfutil
             # Renesas ezFlashCLI for DA146x devices
             - ezflashcli
+            - bsp_downloader
+        value:
+    MYNEWT_DOWNLOADER_SCRIPT:
+        description: >
+            Custom downloader script name
         value:
     MYNEWT_DEBUGGER:
         description: >
