hw/bsp/lpcxpresso55s28: fix bsp flash map, update syscfg
- In the BSP file, changed the sector size to 32kB, which is actual
erasable block size for this flash device. The previous value (512kB)
from datasheet was incorrect and caused problems when erasing flash

- Switched the downloader to jlink, because pyocd debugger was not
working properly

- Added a new value to change the default number of image sectors
from 128 to 6. This prevents an assert error in mcuboot where
the image trailer tried to occupy more space than available in
the image slot

--- a/hw/bsp/lpcxpresso55s28/syscfg.yml
+++ b/hw/bsp/lpcxpresso55s28/syscfg.yml
@@ -65,6 +65,7 @@ syscfg.vals:
     UART_5_PIN_TX: 9
     UART_5_PIN_RX: 8
 
+    BOOTUTIL_MAX_IMG_SECTORS: 6
     CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
     NFFS_FLASH_AREA: FLASH_AREA_NFFS
