ci: Update RAT to 0.17 release
This is major update as now RAT is able to properly hangle gitignore
as well as full path excludes.

--- a/.github/workflows/check_compliance.yml
+++ b/.github/workflows/check_compliance.yml
@@ -90,9 +90,9 @@ jobs:
           fetch-depth: 0
       - name: Install Dependencies
         run: |
-             wget https://dlcdn.apache.org//creadur/apache-rat-0.16.1/apache-rat-0.16.1-bin.tar.gz
-             tar zxf apache-rat-0.16.1-bin.tar.gz apache-rat-0.16.1/apache-rat-0.16.1.jar
-             mv apache-rat-0.16.1/apache-rat-0.16.1.jar apache-rat.jar
+             wget https://archive.apache.org/dist/creadur/apache-rat-0.17/apache-rat-0.17-bin.tar.gz
+             tar zxf apache-rat-0.17-bin.tar.gz apache-rat-0.17/apache-rat-0.17.jar
+             mv apache-rat-0.17/apache-rat-0.17.jar apache-rat.jar
       - name: check licensing
         run: |
              .github/check_license.py
